--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <h1>Hi, I'm <span>Obed</span><br> From Virginia Tech</h1>
                 </div>
 
-                <img src="images/Backkkk.png" class="header-photo">
+                <img src="images/backkkk.png" class="header-photo">
             </div>
 
         </div>
@@ -64,7 +64,7 @@
             <div class="row">
 
                 <div class="about-col-1">
-                    <img src="images/about me sec.jpeg">
+                    <img src="images/about-me-sec.jpeg">
                 </div>
 
                 <div class="about-col-2">
@@ -162,7 +162,7 @@
            <h1 class="sub-title">My Work</h1> 
            <div class="work-list">
             <div class="work">
-                <img src="images/arduino work.jpeg" alt=" Arduino based project">
+                <img src="images/arduino-work.jpeg" alt=" Arduino based project">
                 <div class="layer">
                     <h3>Web Controlled RC Car</h3>
                     <p> Designed and implemented a web-controlled RC car with a secure login system, allowing users to remotely control the car through a web interface. The project integrates hardware and software to deliver reliable and user-friendly remote operation.</p>
@@ -170,7 +170,7 @@
                 </div>
             </div>
             <div class="work">
-                <img src="images/html work.jpeg">
+                <img src="images/html-work.jpeg">
                  <div class="layer">
                     <h3>Front-End project </h3>
                     <p> Designed and built a responsive HTML-based website with clean layout, modern styling, and intuitive navigation. The project focuses on accessibility, performance, and a user-friendly interface across all devices.</p>
@@ -178,7 +178,7 @@
                 </div>
             </div>
             <div class="work">
-                <img src="images/python work.jpeg">
+                <img src="images/python-work.jpeg">
                 <div class="layer">
                     <h3>Python Programs</h3>
                     <p>Developed Python programs and scripts to automate tasks, process data, and solve real-world problems. The projects focus on clean code, efficiency, and practical functionality.</p>
