--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                     <a href="https://www.instagram.com/_bedo48/"><i class="fa-brands fa-instagram"></i></a>
                     <a href="https://www.linkedin.com/in/obed-mavungu-835542300/"><i class="fa-brands fa-linkedin"></i></a>
                 </div>
-                <a href="images/obed-mavung-resume 2025.docx.pdf" download class="btn btn2">Download CV</a>
+                <a href="images/obed-mavung-resume-2026-new.pdf" download class="btn btn2">Download CV</a>
 
             </div>
 
@@ -286,3 +286,4 @@ const msg=document.getElementById("msg")
 
 </body>
 </html>
+
